# flask-compress

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  flask_compress.py  flask_gzip.py  index.html  params.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  index.rst  make.bat
flask_compress/: __init__.py  compat.py  flask_compress.py
tests/: test_flask_compress.py
tests/templates/: large.html  small.html
tests/web/: test.xml
